--- a/app/src/main/res/layout/fragment_temp.xml
+++ b/app/src/main/res/layout/fragment_temp.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"/>
 
 
-    <RadioGroup
+    <RadioGroup android:id="@+id/rgTemp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <RadioButton android:id="@+id/rbCtoF" android:text="Celsius → Fahrenheit" android:checked="true"
